[package]
name = "actix_websockets"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "actix_websockets"
path = "src/main.rs"

[dependencies]
actix-web = "~4.0.0-beta.9"
actix-web-actors = "~4.0.0-beta.7"
anyhow = "1"
actix = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.11.0", default-features = false, features = ["yaml"] }
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.5"
tracing-log = "0.1.2"
tracing-actix-web = "0.4.0-beta.12"
serde_with = "1.10"

[dev-dependencies]
actix-rt = "2"
awc = "3.0.0-beta.8"
once_cell = "1.7.2"
tokio = { version = "1.6.1", features = ["rt", "macros"] }
futures = "0.3"
